assets/css/style.css
/* Theme Description
-------------------------------------------------

	  Theme Name:
	  Author:
	  Support:
	  Description:
	  Version:
	  
------------------------------------------------- 
*/
/* CSS Index
-------------------------------------------------

	1. Theme default css
	2. header
	3. slider
	4. about-area
	5. features-box
	6. department
	7. team
	8. video-area
	9. counter
	10. footer

-------------------------------------------------
*/
/*--------------- ---- Responsive --------------------------*/
/*-------------   Color Variable  --------------*/
@import url("https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800;900&display=swap");
/* line 33, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_color.scss */
.white-bg {
  background: #ffffff;
}

/* line 36, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_color.scss */
.gray-bg {
  background: #F5F9FB;
}
.font-40-lg{
  font-size: 40px;
}
.trinity_logo {
  max-width: 100%;
  max-height: 100%;
  display: block;
  margin: 0 auto;
}
.postItem img {
  height: 270px;
  width: auto;
  object-fit: cover;

}
.title_name{
  color: #ff4935;
}
.custom-font li{
  font-family:sans-serif;
  font-size: 20px;
}
.width-30{
  width: 30%;
}
.font-20{
  font-size: 20px;
}

.btn-primary1 {
  background-color:#ff4935;
 padding-top: 10px;
 padding-bottom: 20px;
  font-size: 30px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 30px;
  width: fit-content;
  border: none;
  text-align: center;
  height: 80%;
  font-size: 2.0rem;
  color: white;

}
.align-left-xs{
text-align: right;
}
.btn-primary1:hover{
  background-color:#4e4699;
  border-color: #8064A2;
  color: white;
}

.btn-success-custom{
  background-color: #61ce70;
  font-size: 20px;
  font-weight: 500;
  padding: 12px 30px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  border: none;
  align-items: center;
  text-align: center;
  color: white;
}
.b{
  font-weight: bold;
}
.display-01{

    font-size: 6rem;
    font-weight: 300;
    line-height: 1.2;
}
.contact-us-custom{
  font-size: 15px;
  padding-top: 5px;
}
.txtbox {
  font-size: 12pt;
  height: 38px;
}

.orangeiconcolor {
  color:#ff4935;
}
.orangebgcolor{
    background-color: #e17c27;
    color: #E2E2E2;
    font-weight: 700;
}
.orangetextcolor{
  color: #e17c27;
}
.lightorangeicon{
  color:#e17c27;
}
.orange-btn{
  background-color: #e17c27;
  color: white;
  font-size: 20px;
  font-weight: 500;
  padding: 12px 30px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  border: none;
  align-items: center;
  text-align: center;
}
.card-rounded{
  border-radius: 10%;
}
.purple-btn{
  background-color: #4054B2;
  color: white;
  font-size: 20px;
  font-weight: 500;
  padding: 12px 30px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  border: none;
  align-items: center;
  text-align: center;
}

.orangeunderline {
  text-decoration: underline;
  text-decoration-color: #e17c27;
  text-decoration-thickness: 3px;
}
.form-control1 {
  display: block;
  width: 100%;
  height: calc(2.25rem + 2px);
  padding: 0.375rem 0.75rem;
  font-size: 16px;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid #ced4da;
  border-radius: 0.25rem;
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  height: auto;
}

.blue-btn{
  background-color: #20b2cd;
  color: white;
  font-size: 20px;
  font-weight: 500;
  padding: 12px 30px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  border: none;
  align-items: center;
  text-align: center;
}
a{
  color: white;
}
.a-custom:hover{
  color: white;
}

header {
  position:fixed;  
  z-index:2; 
  width:100%;
  height:15%;
  text-align:center;
  vertical-align:middle;
  line-height:2em;
  top: 0%;
  background-color: whitesmoke;
}
.blue-icon {
  color: rgb(23,119,242);
}
.green-icon{
  color: rgb(68, 230, 108);
}
.dark-blue-btn{
  background-color: #1f31ae;
  color: white;
  font-size: 20px;
  font-weight: 500;
  padding: 12px 30px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  border: none;
  align-items: center;
  text-align: center;
}
.bluebgcolor{
  background-color: #20b2cd;
  color: #E2E2E2;
  font-weight: 700;
}
.bluetextcolor{
  color: #20b2cd;
}
.blueiconcolor{
  color: #20b2cd;
}
.darkbluetextcolor{
  color: #1f31ae;
}
.darkbluecolor{
  color:#072366;
}
.darkbluebgcolor{
  background-color: #1f31ae;
  color: #E2E2E2;
  font-weight: 700;
}

.yellowiconcolor{
  color: #e7c944;
}
.custom-indent {
  padding-left: 2em;
  position: relative;
}
.custom-text
  {
    font-size: 1.5rem;
    height: auto;
}
.custom-indent-li {
  position: absolute;
  left: 0;
  margin-top:7px;
}
.p-top30{
  padding-top: 25px;
}
.cut-corner {
  padding-top: 225px;

  margin:10px;
  height:330px;
  fill: #f7685b;
   border: 2px solid #f7685b;
   background:
    linear-gradient(to bottom right,transparent 0%,#f7685b 0%) 
    bottom right/100% 100% no-repeat;
  clip-path:polygon(0 0,100% 0,100% calc(100% - 200px),calc(100% - 30%) 100%, 0 100%); 

}

.pc-5{
  padding: 5px;
}
.card-custom-xs{
  background-color: #e17c27;
  color: #E2E2E2;
  font-weight: 700;
  margin: 0px;
  font-size: 20px;
  padding: 25px 0px 25px 0px;
  text-align: center;
  border: 0;
  font-weight: bold;
}
.card-custom-xs-2{
  color: #e17c27;
  margin: 10px;
  font-weight: bold;
  text-align: center;
  border: 0;
}
.card-darkblue {
  text-align: center;
  font-weight: bold;
  border: 0;
  padding: 10px 0 10px 0;
  font-size:23px;
}
.b{
  font-weight: bold;
}

.card-custom-xs-3{
text-align: center;
text-align: center;
  border: 0;
  padding: 35px;
}
.myform .required:after {
  content: " *";
    color: red;
    font-weight: 100;
}
.line-1point2{
  line-height: 1.2;
}
.vertical-text-center{
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
}
.nopadding {
  padding: 0 !important;
  margin: 0 !important;
}
.custom-width-70{
  width: 70%;
  margin: auto;
}
/* ... */

